# pokedex-data-visualizer

./: .gitignore  README.md  app.py  pokedex.py  pyproject.toml
api/: imagem.py  pokemon.py
model/: Model.py
